--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -1,8 +1,8 @@
 {
   "common": {
-    "title": "魔方简历",
+    "title": "一搭简历",
     "subtitle": "AI 驱动简历编辑器",
-    "description": "魔方简历是一款开源的简历编辑器，免费，隐私优先。无需注册登录，数据完全存储在本地，支持数据导出备份，确保您的简历数据随时可用。",
+    "description": "一搭简历是一款开源的简历编辑器，免费，隐私优先。无需注册登录，数据完全存储在本地，支持数据导出备份，确保您的简历数据随时可用。",
     "dashboard": "仪表盘",
     "edit": "编辑",
     "delete": "删除",
@@ -11,7 +11,7 @@
   },
   "home": {
     "header": {
-      "title": "魔方简历",
+      "title": "一搭简历",
       "startButton": "开始使用",
       "features": "功能特点",
       "pricing": "定价",
@@ -23,12 +23,12 @@
     "hero": {
       "badge": "免费简历创作",
       "title": "让简历创作变得简单而智能",
-      "subtitle": "魔方简历利用 AI 技术，帮助您快速创建专业的简历。无需注册，免费使用，数据安全存储。",
+      "subtitle": "一搭简历利用 AI 技术，帮助您快速创建专业的简历。无需注册，免费使用，数据安全存储。",
       "cta": "立即开始",
       "secondary": "浏览模板"
     },
     "features": {
-      "title": "为什么选择魔方简历？",
+      "title": "为什么选择一搭简历？",
       "subtitle": "我们提供一站式简历解决方案，让您的求职之路更加顺畅",
       "ai": {
         "badge": "AI 智能纠错",
@@ -63,23 +63,23 @@
     },
     "cta": {
       "title": "开启你的新职业篇章",
-      "description": "立即使用魔方简历，创建一份令人印象深刻的简历",
+      "description": "立即使用一搭简历，创建一份令人印象深刻的简历",
       "button": "免费开始使用"
     },
     "footer": {
-      "copyright": " 2025 魔方简历. 保留所有权利."
+      "copyright": " 2025 一搭简历. 保留所有权利."
     },
     "changelog": "更新日志",
     "faq": {
       "title": "常见问题",
       "items": [
         {
-          "question": "使用魔方简历需要付费吗？",
-          "answer": "魔方简历目前是免费的，满足基础简历制作需求，开源版本的功能不会变更，导出PDF功能也永远不会收费。"
+          "question": "使用一搭简历需要付费吗？",
+          "answer": "一搭简历目前是免费的，满足基础简历制作需求，开源版本的功能不会变更，导出PDF功能也永远不会收费。"
         },
         {
           "question": "我的简历数据安全吗？",
-          "answer": "是的，非常安全。魔方简历采用本地存储方式，您的所有数据都保存在您自己的设备上，不存在云存储，完全保护您的隐私。"
+          "answer": "是的，非常安全。一搭简历采用本地存储方式，您的所有数据都保存在您自己的设备上，不存在云存储，完全保护您的隐私。"
         },
         {
           "question": "支持哪些简历格式导出？",
